--- a/src/components/Widget/styles.css
+++ b/src/components/Widget/styles.css
@@ -5,7 +5,6 @@
   color: var(--color-white);
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
   padding: 5px;
 }
@@ -14,12 +13,15 @@
   display: block;
   width: 100%;
   font-size: 20px;
+  font-weight: 100;
   text-align: center;
+  justify-self: start;
 }
 
 .widget-content {
   display: flex;
   flex: 1;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
