--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,11 @@
+@import "variables.scss";
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Helvetica Neue', 'Work Sans', sans-serif;
   font-size: 16px;
   margin: 0;
   padding: 0;
@@ -12,9 +14,32 @@ body {
 }
 
 .text-large {
-  font-size: 70px;
+  font-size: 60px;
+}
+
+.text-medium {
+  font-size: 40px;
 }
 
 .text-small {
-  font-size: 13px;
+  font-size: 20px;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
+.text-green {
+  color: $color-green;
+}
+
+.text-red {
+  color: $color-red;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
